# argocd-applicationset-json-plugin

./: .gitignore  .gitlab-ci-original.yml  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD_VARIANTS.md  CHANGES.md  CI_CD.md  DECISION_MATRIX.md  DUAL_MODE_GUIDE.md  Dockerfile  Dockerfile.dual  Dockerfile.jq  README.md  TESTING.md  TEST_SUITE_SUMMARY.md  VERSIONING.md  VERSIONING_QUICK_START.md  plugin.py  plugin_dual.py  plugin_jq.py  plugin_jsonpath.py  pyproject.toml
.github/workflows/: docker-build.yml
tests/: README.md  run_all_tests.sh  test_docker.sh  test_dual.sh  test_jq.sh  test_jsonpath.sh
tests/data/: nested_object.json  networks.json  simple_array.json
